--- a/packages/flutter_arbor/pubspec.yaml
+++ b/packages/flutter_arbor/pubspec.yaml
@@ -13,9 +13,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  arbor:
-    path:
-      ../arbor
+  arbor: ^0.1.0
 
 dev_dependencies:
   flutter_test:
